--- a/GITS.Hrms.WebSite/GITS.Hrms.WebSite.csproj
+++ b/GITS.Hrms.WebSite/GITS.Hrms.WebSite.csproj
@@ -47,13 +47,11 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AjaxControlToolkit, Version=3.0.30512.20315, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Asa.Hrms.Library\Libs\AjaxControlToolkit.dll</HintPath>
+    <Reference Include="AjaxControlToolkit">
+      <HintPath>..\GITS.Hrms.Library\bin\Release\AjaxControlToolkit.dll</HintPath>
     </Reference>
-    <Reference Include="Asa.ExcelXmlWriter, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Asa.Hrms.Library\Libs\Asa.ExcelXmlWriter.dll</HintPath>
+    <Reference Include="Asa.ExcelXmlWriter">
+      <HintPath>..\GITS.Hrms.Library\bin\Release\Asa.ExcelXmlWriter.dll</HintPath>
     </Reference>
     <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="CrystalDecisions.ReportSource, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
@@ -61,7 +59,7 @@
     <Reference Include="CrystalDecisions.VSDesigner, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="CrystalDecisions.Web, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="GITS.Hrms.Library">
-      <HintPath>..\Asa.Hrms.Library\bin\Release\GITS.Hrms.Library.dll</HintPath>
+      <HintPath>..\GITS.Hrms.Library\bin\Release\GITS.Hrms.Library.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.WebTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
