--- a/GITS.Hrms.WebSite/Web.config
+++ b/GITS.Hrms.WebSite/Web.config
@@ -6,8 +6,8 @@
   </appSettings>
   <location allowOverride="false"/>
   <connectionStrings>
-    <add name="Asa.Hrms.Data.ConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=HRMS;Timeout=600;Persist Security Info=True;User ID=sa;Password=Q/88Qn7L5DKypxkzy7WevnEuSgPf8foIe5OMnZGuWYI=;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
-    <add name="Asa.Hrms.Data.DataSourceName" connectionString=".\SQLEXPRESS"/>
+    <add name="Asa.Hrms.Data.ConnectionString" connectionString="Data Source=103.203.95.42;Initial Catalog=HRMS;Timeout=600;Persist Security Info=True;User ID=sa;Password=Q/88Qn7L5DKypxkzy7WevnEuSgPf8foIe5OMnZGuWYI=;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+    <add name="Asa.Hrms.Data.DataSourceName" connectionString="103.203.95.42"/>
     <add name="Asa.Hrms.Data.DatabaseName" connectionString="HRMS"/>
     <add name="Asa.Hrms.Data.Provider" connectionString="SQL Server"/>
     <add name="Asa.Hrms.Data.Version" connectionString="1.0.0"/>
