renamming connection string

--- a/GITS.Hrms.WebSite/Web.config
+++ b/GITS.Hrms.WebSite/Web.config
@@ -6,12 +6,12 @@
   </appSettings>
   <location allowOverride="false"/>
   <connectionStrings>
-    <add name="Asa.Hrms.Data.ConnectionString" connectionString="Data Source=103.203.95.42;Initial Catalog=HRMS;Timeout=600;Persist Security Info=True;User ID=sa;Password=Q/88Qn7L5DKypxkzy7WevnEuSgPf8foIe5OMnZGuWYI=;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
-    <add name="Asa.Hrms.Data.DataSourceName" connectionString="103.203.95.42"/>
-    <add name="Asa.Hrms.Data.DatabaseName" connectionString="HRMS"/>
-    <add name="Asa.Hrms.Data.Provider" connectionString="SQL Server"/>
-    <add name="Asa.Hrms.Data.Version" connectionString="1.0.0"/>
-    <add name="Asa.Hrms.Data.DatabaseUserId" connectionString="sa"/>
+    <add name="GITS.Hrms.Data.ConnectionString" connectionString="Data Source=103.203.95.42;Initial Catalog=HRMS;Timeout=600;Persist Security Info=True;User ID=sa;Password=Q/88Qn7L5DKypxkzy7WevnEuSgPf8foIe5OMnZGuWYI=;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+    <add name="GITS.Hrms.Data.DataSourceName" connectionString="103.203.95.42"/>
+    <add name="GITS.Hrms.Data.DatabaseName" connectionString="HRMS"/>
+    <add name="GITS.Hrms.Data.Provider" connectionString="SQL Server"/>
+    <add name="GITS.Hrms.Data.Version" connectionString="1.0.0"/>
+    <add name="GITS.Hrms.Data.DatabaseUserId" connectionString="sa"/>
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -77,7 +77,7 @@
     </httpHandlers>
     <membership defaultProvider="MmsMembershipProvider">
       <providers>
-        <add name="MmsMembershipProvider" type="GITS.Hrms.Library.Security.MmsMembershipProvider" connectionStringName="Asa.Hrms.Data.ConnectionString"/>
+        <add name="MmsMembershipProvider" type="GITS.Hrms.Library.Security.MmsMembershipProvider" connectionStringName="GITS.Hrms.Data.ConnectionString"/>
       </providers>
     </membership>
   </system.web>
