footer problem solved

--- a/GITS.Hrms.WebSite/GITS.Hrms.WebSite.csproj
+++ b/GITS.Hrms.WebSite/GITS.Hrms.WebSite.csproj
@@ -90,11 +90,99 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\mySheet.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Images\add.png" />
+    <Content Include="Images\admin.png" />
+    <Content Include="Images\Ajax.gif" />
+    <Content Include="Images\AppBackground.gif" />
+    <Content Include="Images\appBackground.jpg" />
+    <Content Include="Images\Audit.gif" />
+    <Content Include="Images\audit.png" />
+    <Content Include="Images\Calendar.gif" />
+    <Content Include="Images\db.png" />
+    <Content Include="Images\DbManagement.gif" />
+    <Content Include="Images\Edit.gif" />
+    <Content Include="Images\Error.gif" />
+    <Content Include="Images\gits.png" />
+    <Content Include="Images\header.jpg" />
+    <Content Include="Images\header.png" />
+    <Content Include="Images\HR.gif" />
+    <Content Include="Images\hr.png" />
+    <Content Include="Images\hsplitter.gif" />
+    <Content Include="Images\info.gif" />
+    <Content Include="Images\LMBackground.gif" />
+    <Content Include="Images\LMenuA.gif" />
+    <Content Include="Images\LMenuB.gif" />
+    <Content Include="Images\LMenuC.gif" />
+    <Content Include="Images\LMHoverBackground.gif" />
+    <Content Include="Images\LMSelect.gif" />
+    <Content Include="Images\LoginButton.gif" />
+    <Content Include="Images\LoginLeft.jpg" />
+    <Content Include="Images\LoginMiddle.jpg" />
+    <Content Include="Images\LoginRight.jpg" />
     <Content Include="Images\logo.png" />
+    <Content Include="Images\logo1.png" />
+    <Content Include="Images\Lookup.gif" />
+    <Content Include="Images\MenuArrow.gif" />
+    <Content Include="Images\MenuBullet.gif" />
+    <Content Include="Images\MenuSeparator.gif" />
+    <Content Include="Images\minical.gif" />
+    <Content Include="Images\next.gif" />
+    <Content Include="Images\Payroll.gif" />
+    <Content Include="Images\prev.gif" />
+    <Content Include="Images\progressbg_green.gif" />
+    <Content Include="Images\remove.png" />
     <Content Include="Images\Report.gif" />
+    <Content Include="Images\report.png" />
+    <Content Include="Images\Role.gif" />
+    <Content Include="Images\save.png" />
+    <Content Include="Images\saveClose.png" />
+    <Content Include="Images\saveNew.png" />
     <Content Include="Images\Search.gif" />
+    <Content Include="Images\search.png" />
     <Content Include="Images\Search1.gif" />
+    <Content Include="Images\second_level_menu_symbol.gif" />
+    <Content Include="Images\security.gif" />
+    <Content Include="Images\security.png" />
+    <Content Include="Images\Signature.jpg" />
     <Content Include="Images\Sign_LetterOfIdCard.JPG" />
+    <Content Include="Images\space.gif" />
+    <Content Include="Images\SubHeadBack.gif" />
+    <Content Include="Images\SubHeadFront.gif" />
+    <Content Include="Images\TBAdd.gif" />
+    <Content Include="Images\TBAddChild.gif" />
+    <Content Include="Images\TBAddParent.gif" />
+    <Content Include="Images\TBAddProduct.gif" />
+    <Content Include="Images\TBAppointment.gif" />
+    <Content Include="Images\TBBackground.gif" />
+    <Content Include="Images\TBCancelChanges.gif" />
+    <Content Include="Images\TBDelete.gif" />
+    <Content Include="Images\TBEdit.gif" />
+    <Content Include="Images\TBEmail.gif" />
+    <Content Include="Images\TBExportToExcel.gif" />
+    <Content Include="Images\TBFax.gif" />
+    <Content Include="Images\TBFind.gif" />
+    <Content Include="Images\TBHelp.gif" />
+    <Content Include="Images\TBLetter.gif" />
+    <Content Include="Images\TBList.gif" />
+    <Content Include="Images\TBMouseDown.gif" />
+    <Content Include="Images\TBPhoneCall.gif" />
+    <Content Include="Images\TBRefresh.gif" />
+    <Content Include="Images\TBRemoveProduct.gif" />
+    <Content Include="Images\TBSave.gif" />
+    <Content Include="Images\TBSaveClose.gif" />
+    <Content Include="Images\TBSaveNew.gif" />
+    <Content Include="Images\TBSeperator.gif" />
+    <Content Include="Images\TBTask.gif" />
+    <Content Include="Images\Temp\default.jpg" />
+    <Content Include="Images\User.gif" />
+    <Content Include="Images\user.png" />
+    <Content Include="Images\vsplitter.gif" />
+    <Content Include="Images\warning.gif" />
+    <Content Include="Images\WorkPlace.gif" />
+    <Content Include="Images\XGridFirstPage.gif" />
+    <Content Include="Images\XGridLastPage.gif" />
+    <Content Include="Images\XGridNextPage.gif" />
+    <Content Include="Images\XGridPreviousPage.gif" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
@@ -1308,59 +1396,6 @@
     <Content Include="App_Themes\Default\Default.skin" />
     <Content Include="Default.aspx" />
     <Content Include="Home.aspx" />
-    <Content Include="Images\Calendar.gif" />
-    <Content Include="Images\Edit.gif" />
-    <Content Include="Images\Error.gif" />
-    <Content Include="Images\info.gif" />
-    <Content Include="Images\LMenuA.gif" />
-    <Content Include="Images\LMenuB.gif" />
-    <Content Include="Images\LMenuC.gif" />
-    <Content Include="Images\LoginButton.gif" />
-    <Content Include="Images\LoginLeft.jpg" />
-    <Content Include="Images\LoginlLogo.jpg" />
-    <Content Include="Images\LoginMiddle.jpg" />
-    <Content Include="Images\LoginRight.jpg" />
-    <Content Include="Images\Logo.bmp" />
-    <Content Include="Images\Lookup.gif" />
-    <Content Include="Images\MenuArrow.gif" />
-    <Content Include="Images\MenuBullet.gif" />
-    <Content Include="Images\MenuSeparator.gif" />
-    <Content Include="Images\minical.gif" />
-    <Content Include="Images\next.gif" />
-    <Content Include="Images\prev.gif" />
-    <Content Include="Images\second_level_menu_symbol.gif" />
-    <Content Include="Images\security.gif" />
-    <Content Include="Images\space.gif" />
-    <Content Include="Images\SubHeadBack.gif" />
-    <Content Include="Images\SubHeadFront.gif" />
-    <Content Include="Images\TBAdd.gif" />
-    <Content Include="Images\TBAddChild.gif" />
-    <Content Include="Images\TBAddParent.gif" />
-    <Content Include="Images\TBAddProduct.gif" />
-    <Content Include="Images\TBAppointment.gif" />
-    <Content Include="Images\TBCancelChanges.gif" />
-    <Content Include="Images\TBDelete.gif" />
-    <Content Include="Images\TBEdit.gif" />
-    <Content Include="Images\TBEmail.gif" />
-    <Content Include="Images\TBExportToExcel.gif" />
-    <Content Include="Images\TBFax.gif" />
-    <Content Include="Images\TBFind.gif" />
-    <Content Include="Images\TBHelp.gif" />
-    <Content Include="Images\TBLetter.gif" />
-    <Content Include="Images\TBList.gif" />
-    <Content Include="Images\TBPhoneCall.gif" />
-    <Content Include="Images\TBRemoveProduct.gif" />
-    <Content Include="Images\TBSave.gif" />
-    <Content Include="Images\TBSaveClose.gif" />
-    <Content Include="Images\TBSaveNew.gif" />
-    <Content Include="Images\TBSeperator.gif" />
-    <Content Include="Images\TBTask.gif" />
-    <Content Include="Images\warning.gif" />
-    <Content Include="Images\WorkPlace.gif" />
-    <Content Include="Images\XGridFirstPage.gif" />
-    <Content Include="Images\XGridLastPage.gif" />
-    <Content Include="Images\XGridNextPage.gif" />
-    <Content Include="Images\XGridPreviousPage.gif" />
     <Content Include="Login.aspx" />
     <Content Include="Permission.aspx" />
     <Content Include="Script\CalendarControl.js" />
@@ -1465,23 +1500,6 @@
     <Content Include="Export.aspx" />
     <Content Include="HRM\Welcome.aspx" />
     <Content Include="HRM\WF_WelfareFundAssistanceAdd.aspx" />
-    <Content Include="Images\Ajax.gif" />
-    <Content Include="Images\AppBackground.gif" />
-    <Content Include="Images\Audit.gif" />
-    <Content Include="Images\DbManagement.gif" />
-    <Content Include="Images\HR.gif" />
-    <Content Include="Images\header.jpg" />
-    <Content Include="Images\hsplitter.gif" />
-    <Content Include="Images\LMBackground.gif" />
-    <Content Include="Images\LMHoverBackground.gif" />
-    <Content Include="Images\LMSelect.gif" />
-    <Content Include="Images\progressbg_green.gif" />
-    <Content Include="Images\Role.gif" />
-    <Content Include="Images\TBBackground.gif" />
-    <Content Include="Images\TBMouseDown.gif" />
-    <Content Include="Images\TBRefresh.gif" />
-    <Content Include="Images\User.gif" />
-    <Content Include="Images\vsplitter.gif" />
     <Content Include="Reports\CrystalReportParameterUI.aspx" />
     <Content Include="Reports\HRM_SummeryReport.aspx" />
     <Content Include="Reports\H_EmployeeConsultancyReport.aspx" />
@@ -1618,9 +1636,6 @@
     <Content Include="HRM\H_SpecialIncrementAdd.aspx" />
     <Content Include="HRM\H_TransferAdd.aspx" />
     <Content Include="HRM\ProcessExecution.aspx" />
-    <Content Include="Images\Payroll.gif" />
-    <Content Include="Images\search.png" />
-    <Content Include="Images\Signature.jpg" />
     <Content Include="Payroll\P_DeductionAdd.aspx" />
     <Content Include="Payroll\P_DeductionList.aspx" />
     <Content Include="Payroll\P_EarningAdd.aspx" />
@@ -1669,7 +1684,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Images\Temp\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
